# beacon-fuzz

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TODO.md  buildfuzzers.sh  pyproject.toml  runfuzzer.sh
beaconfuzz_v2/: .dockerignore  Cargo.toml  Makefile  README.md  attest.ssz  beacon.ssz  build.rs
beaconfuzz_v2/docker/: Dockerfile
beaconfuzz_v2/fuzz/: Cargo.toml
beaconfuzz_v2/fuzz/fuzz_targets/: struct_attestation.rs  struct_attester_slashing.rs  struct_block.rs  struct_block_header.rs  struct_deposit.rs  struct_proposer_slashing.rs  struct_voluntary_exit.rs
beaconfuzz_v2/libs/bfuzz-jni/: Cargo.toml  build.rs
beaconfuzz_v2/libs/bfuzz-jni/src/: DummyFuzzUtil.java  bfuzzjni.c  bfuzzjni.h  dummy.c  hello.c  hello.h  lib.rs
beaconfuzz_v2/libs/eth2clientsfuzz/: Cargo.toml
beaconfuzz_v2/libs/eth2clientsfuzz/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/libs/lighthouse/: Cargo.toml
beaconfuzz_v2/libs/lighthouse/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/libs/nimbus/: Cargo.toml  build.rs
beaconfuzz_v2/libs/nimbus/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  debug.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/libs/pfuzz/: libpfuzz.h  pfuzz.go
beaconfuzz_v2/libs/prysm/: Cargo.toml  build.rs
beaconfuzz_v2/libs/prysm/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  debug.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/libs/teku/: Cargo.toml
beaconfuzz_v2/libs/teku/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  debug.rs  deposit.rs  lib.rs  main.rs  proposer_slashing.rs  util.rs  voluntary_exit.rs
beaconfuzz_v2/lighthouse/: Cargo.toml
beaconfuzz_v2/lighthouse/src/: deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/nimbus/: Cargo.toml
beaconfuzz_v2/nimbus/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/prysm/: Cargo.toml
beaconfuzz_v2/prysm/src/: attestation.rs  attester_slashing.rs  block.rs  block_header.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
beaconfuzz_v2/src/: lighthouse.rs  main.rs  nimbus.rs  prysm.rs  rand.rs  utils.rs
bls-fuzz/: Cargo.toml  ISSUES.md  README.md
bls-fuzz/fuzz/: Cargo.toml
bls-fuzz/fuzz/fuzz_targets/: fuzz_blst_serde_g1.rs  fuzz_blst_serde_g2.rs  fuzz_differential_add_g1.rs  fuzz_differential_add_g2.rs  fuzz_differential_mul_g1.rs  fuzz_differential_mul_g2.rs  fuzz_differential_serde_g1.rs  fuzz_differential_serde_g2.rs  fuzz_milagro_serde_g1.rs  fuzz_milagro_serde_g2.rs
bls-fuzz/src/: lib.rs
docs/: NIMBUS.md  (+3 more)
eth2diff/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
eth2diff/docker/: lighthouse.Dockerfile  nimbus.Dockerfile  prysm.Dockerfile  teku.Dockerfile  zcli.Dockerfile
eth2diff/shared/corpora/: block.ssz  pre.ssz
eth2diff/src/: main.rs
eth2fuzz/: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  cli.rs  eth2fuzz.mk
eth2fuzz/debug/: Cargo.toml  debug_lodestar.js  debug_nim.nim  debug_prysm.go  debug_simple_template.rs  debug_template.rs
eth2fuzz/docker/: eth2fuzz.Dockerfile  lighthouse.Dockerfile  lodestar.Dockerfile  nimbus.Dockerfile  prysm.Dockerfile  teku.Dockerfile
eth2fuzz/fuzzer-afl/: Cargo.toml  all_fuzz_log_afl.txt  simple_template.rs  template.rs
eth2fuzz/fuzzer-honggfuzz/: Cargo.toml  template.rs
eth2fuzz/fuzzer-libfuzzer/: Cargo.toml  simple_template.rs  template.rs
eth2fuzz/fuzzer-libfuzzer/fuzz/: Cargo.toml
eth2fuzz/fuzzers/js-jsfuzz/: simple_template.js
eth2fuzz/fuzzers/nim-afl/: simple_template.nim
eth2fuzz/fuzzers/nimafl/: fuzztest.nim  simple_template.nim  template.nim
eth2fuzz/fuzzers/nimlibfuzzer/: fuzztest.nim  simple_template.nim  template.nim
eth2fuzz/fuzzers/rust-afl/: Cargo.toml  template.rs
eth2fuzz/fuzzers/rust-afl/src/: lib.rs
eth2fuzz/fuzzers/rust-honggfuzz/: Cargo.toml  simple_template.rs  template.rs
eth2fuzz/fuzzers/rust-libfuzzer/: Cargo.toml
eth2fuzz/fuzzers/rust-libfuzzer/fuzz/: Cargo.toml
eth2fuzz/src/: debug.rs  env.rs  fuzzers.rs  go_fuzzers.rs  java_fuzzers.rs  js_fuzzers.rs  main.rs  nim_fuzzer.rs  nim_fuzzers.rs  rust_fuzzers.rs  targets.rs  utils.rs
eth2fuzz/targets/: Cargo.toml
eth2fuzz/targets/go/: lib.go
eth2fuzz/targets/js/: lib.js
eth2fuzz/targets/nim/: lib.nim
eth2fuzz/targets/rust/: Cargo.toml
eth2fuzz/targets/rust/src/: attester_slashing.rs  beaconstate.rs  lib.rs  voluntary_exit.rs
eth2fuzz/targets/src/: attestation.rs  attester_slashing.rs  beaconstate.rs  block.rs  block_header.rs  deposit.rs  lib.rs  proposer_slashing.rs  voluntary_exit.rs
eth2fuzz/workspace/: find_my_crashes.sh
eth2fuzz/workspace/afl/: template.rs
eth2fuzz/workspace/corpora/: extract_corpora_from_spectests.sh
eth2fuzz/workspace/corpora/enr/: prysm_enr1.txt  prysm_enr2.txt
eth2fuzz/workspace/gofuzz/: lib.go
eth2fuzz/workspace/hfuzz/: Cargo.toml  all_fuzz_log_hfuzz.txt  template.rs
eth2fuzz/workspace/javafuzz/: TekuFuzz.java  tekuclass.sh
eth2fuzz/workspace/jsfuzz/: lodestar_attestation.js  lodestar_attester_slashing.js  lodestar_beaconstate.js  lodestar_block.js  lodestar_block_header.js  lodestar_deposit.js  lodestar_enr.js  lodestar_proposer_slashing.js  lodestar_voluntary_exit.js
eth2fuzz/workspace/libfuzzer/fuzz/: Cargo.toml
eth2fuzz/workspace/nimlibfuzzer/: nimbus_attestation.nim  nimbus_attester_slashing.nim  nimbus_beaconstate.nim  nimbus_block.nim  nimbus_block_header.nim  nimbus_deposit.nim  nimbus_enr.nim  nimbus_proposer_slashing.nim  nimbus_voluntary_exit.nim
eth2fuzz/workspace/targets/go/: lib.go
eth2fuzz/workspace/targets/js/: lib.js
eth2fuzz/workspace/targets/nim/: lib.nim
eth2fuzz/workspace/targets/rust/: Cargo.toml
files/fuzzers/block/lighthouse/: Cargo.toml
(+156 files in other folders)
