[package]
name = "beaconfuzz_v2"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.1" # Error
structopt = "0.3.14" # cli parsing
clap =  "2.33.0" # arg_num
walkdir = "2"
honggfuzz = "0.5"
rand = "0.6"
eth2_ssz = { path = "../../lighthouse/consensus/ssz/" }
eth2_ssz_derive = { path = "../../lighthouse/consensus/ssz_derive/" }
state_processing = { path = "../../lighthouse/consensus/state_processing/" }
types = { path = "../../lighthouse/consensus/types" }
# local library
#nimbus = { path = "libs/nimbus" }
#prysm = { path = "libs/prysm" }
# lighthouse = { path = "libs/lighthouse" }
eth2clientsfuzz = { path = "libs/eth2clientsfuzz" }

[workspace]
members = [
	"libs/prysm",
	"libs/nimbus",
	"libs/lighthouse",
	"libs/eth2clientsfuzz",
	"libs/bfuzz-jni",
	"libs/teku",
]



[patch.crates-io]
# Needed to provide paths to some relevant dependencies
# Alternative would be to depend on the lighthouse root, which
# contains this?
tree_hash = { path = "../../lighthouse/consensus/tree_hash" }
tree_hash_derive = { path = "../../lighthouse/consensus/tree_hash_derive" }
eth2_ssz = { path = "../../lighthouse/consensus/ssz" }
eth2_ssz_derive = { path = "../../lighthouse/consensus/ssz_derive" }
eth2_ssz_types = { path = "../../lighthouse/consensus/ssz_types" }
eth2_hashing = { path = "../../lighthouse/crypto/eth2_hashing" }
