[package]
name = "bls-fuzz"
version = "0.1.0"
authors = ["Kirk Baird <baird.k@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
blst = { path = "impls/blst/bindings/rust" }

[dependencies.amcl]
git = "https://github.com/apache/incubator-milagro-crypto-rust"
rev = "8b9913799bb2a9568515d118970ec0f09910492b"
features = ["bls381"]
