[package]
name = "eth2fuzz"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

[[bin]]
name = "eth2fuzz"
path = "src/main.rs"

[dependencies]
structopt = "0.3.15"
clap = "2.31.2"
regex = "0.2.10"
failure = "0.1.1"
strsim = "0.7.0"
fs_extra = "1.1.0"
strum = "0.18.0"
strum_macros = "0.18.0"

[workspace]
exclude = [
  "fuzzers",
  "targets",
  "debug",
  "workspace",
]
