[package]
name = "eth2clientsfuzz"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nimbus = { path = "../nimbus" }
teku = { path = "../teku" }
prysm = { path = "../prysm" }
lighthouse = { path = "../lighthouse" }
eth2_ssz = { path = "../../../../lighthouse/consensus/ssz/" }
eth2_ssz_derive = { path = "../../../../lighthouse/consensus/ssz_derive/" }
state_processing = { path = "../../../../lighthouse/consensus/state_processing/", features = ["arbitrary-fuzz"]}
types = { path = "../../../../lighthouse/consensus/types", features = ["arbitrary-fuzz"]}
arbitrary = { version = "0.4.6", features = ["derive"] }
