[package]
name = "teku"
version = "0.1.0"
authors = ["Nathaniel Jensen <nathaniel@sigmaprime.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# TODO shouldn't be a executable/application, just for initial dev/testing
# TODO convert to lib

[dependencies]
bfuzz-jni = { path = "../bfuzz-jni" }
