[package]
name = "teku"
version = "0.1.0"
authors = ["Nathaniel Jensen <nathaniel at sigmaprime dot io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bfuzz-jni = { path = "../bfuzz-jni" }
eth2_ssz = { path = "../../../../lighthouse/consensus/ssz/" }
eth2_ssz_derive = { path = "../../../../lighthouse/consensus/ssz_derive/" }
types = { path = "../../../../lighthouse/consensus/types" }
