[package]
name = "fuzz-targets-libfuzzer"
version = "0.1.0"
authors = ["The rust-fuzz Project Developers"]

[package.metadata]
cargo-fuzz = true

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
libfuzzer-sys = "0.3"
walkdir = "2"
lazy_static = "1.3.0"
rand = "0.6"
fuzz-targets = {path = "../../targets/rust"}
eth2_ssz = { path = "../../../../lighthouse/consensus/ssz/" }
eth2_ssz_derive = { path = "../../../../lighthouse/consensus/ssz_derive/" }
state_processing = { path = "../../../../lighthouse/consensus/state_processing/" }
types = { path = "../../../../lighthouse/consensus/types" }

[patch.crates-io]
# Needed to provide paths to some relevant dependencies
# Alternative would be to depend on the lighthouse root, which
# contains this?
tree_hash = { path = "../../../../lighthouse/consensus/tree_hash" }
tree_hash_derive = { path = "../../../../lighthouse/consensus/tree_hash_derive" }
eth2_ssz = { path = "../../../../lighthouse/consensus/ssz" }
eth2_ssz_derive = { path = "../../../../lighthouse/consensus/ssz_derive" }
eth2_ssz_types = { path = "../../../../lighthouse/consensus/ssz_types" }
eth2_hashing = { path = "../../../../lighthouse/crypto/eth2_hashing" }
# web3 = { git = "https://github.com/tomusdrw/rust-web3" }
