[package]
name = "fuzz-targets"
version = "0.1.0"
authors = ["Patrick Ventuzelo <ventuzelo.patrick@gmail.com>"]
edition = "2018"

[dependencies]
walkdir = "2"
eth2_ssz = { path = "../../../../lighthouse/consensus/ssz/"}
bls = { path = "../../../../lighthouse/crypto/bls/"}
eth2_ssz_derive = { path = "../../../../lighthouse/consensus/ssz_derive/" }
state_processing = { path = "../../../../lighthouse/consensus/state_processing/" }
types = { path = "../../../../lighthouse/consensus/types"}
eth2_libp2p =  { path = "../../../../lighthouse/beacon_node/eth2_libp2p" }
tokio = "0.1.22"
tokio-util = { version = "0.3.1", features = ["codec", "compat"] }

[dependencies.libp2p]
git = "https://github.com/sigp/rust-libp2p"
rev = "147bb43fa56c1b84253606eabedb0794eeed8b94"
default-features = false
features = ["websocket", "identify", "mplex", "yamux", "noise", "gossipsub", "dns", "secio", "tcp-tokio"]