[package]
name = "swap_or_not_shuffle_fuzzer"
version = "0.1.0"
authors = ["Guido Vranken <guido.vranken@ethereum.org>"]
edition = "2018"

[dependencies]
swap_or_not_shuffle = { path = "../../../lighthouse/eth2/utils/swap_or_not_shuffle/" }
libc = "0.2"

[lib]
crate-type = ["staticlib"]

[patch]
[patch.crates-io]
# Needed to provide paths to some relevant dependencies
# Alternative would be to depend on the lighthouse root, which
# contains this?
tree_hash = { path = "../../../lighthouse/eth2/utils/tree_hash" }
tree_hash_derive = { path = "../../../lighthouse/eth2/utils/tree_hash_derive" }
eth2_ssz = { path = "../../../lighthouse/eth2/utils/ssz" }
eth2_ssz_derive = { path = "../../../lighthouse/eth2/utils/ssz_derive" }
eth2_ssz_types = { path = "../../../lighthouse/eth2/utils/ssz_types" }
eth2_hashing = { path = "../../../lighthouse/eth2/utils/eth2_hashing" }
